Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.021     2011-12-07 10:49:46 EST5EDT

    - make bugtracker pod section only list web link, not email; this
      allow easier modification for use with github instead of RT which
      does not provide an email option

0.020     2011-09-23 15:11:51 America/New_York

    - added code to copy README.pod and META.json to repo directory

0.019     2011-07-18 17:23:28 America/New_York

    - added Test::Version
    - removed unused prereqs

0.018     2011-07-11 21:52:26 America/New_York

    - swapped in InsertCopyright for Prepender
    - swapped in OurPkgVersion for PkgVersion
    - removed Repository to rely soly on GithubMeta

0.017     2011-02-06 21:57:53 EST5EDT

    - added Dist::Zilla::Plugin::CheckPrereqsIndexed

0.016     2011-01-31 22:14:12 EST5EDT

    - added Pod::Weaver::Section::Support and Bugtracker to the mix

0.015     2011-01-23 17:11:20 EST5EDT

    - updated prereqs, including missing Pod::Elemental::Transformer::List

0.014     2011-01-06 16:59:44 EST5EDT

    - bump Repository prereq to 0.17

0.013     2010-11-02 21:52:50 EST5EDT

    - bump MetaProvides::Package prereq and tell it to honor MetaNoIndex
    - add package 'DB' to MetaNoIndex

0.012     2010-10-29 16:42:37 EST5EDT

    - annotate example dist.ini in documents (suggeston from Tim Bunce)

0.011     2010-10-10 22:47:05 EST5EDT

    - replace BumpNextVersionFromGit with Git::NextVersion

0.010     2010-10-07 13:42:21 EST5EDT

    - adds GithubMeta to override Repository if repo is on github

    - replaces AutoPrereq (deprecated) with AutoPrereqs

0.009     2010-08-17 08:04:05 EST5EDT

    - set a minimum TaskWeaver prereq to work with Dist::Zilla 2.X

0.008     2010-08-11 17:50:46 EST5EDT

    - add Pod::Weaver::PluginBundle::DAGOLDEN (which is @RJBS plus wikidoc)

0.007     2010-05-26 12:49:30 America/New_York

    - bump Dist::Zilla prereq to 3.101450
